settings inputs refined, just some bugs in select input list z-index...

--- a/src/views/app/assets/css/app.css
+++ b/src/views/app/assets/css/app.css
@@ -18,6 +18,11 @@ body {
   color: white;
 }
 
+.label-span {
+  width: 100px;
+  height: 30px;
+}
+
 /* Animated Background */
 
 .animated-bg {
